Fix spacing on receive addr. Fix background color for custom amount

--- a/src/components/wallet-receive/wallet-receive.scss
+++ b/src/components/wallet-receive/wallet-receive.scss
@@ -91,7 +91,7 @@ page-choose-fee-level {
     }
   }
   .addr-content {
-    margin: 0 15px 0 15px;
+    margin: 0 15px 15px 15px;
     .addr-container {
       text-align: center;
       font-size: 15px;
