--- a/src/theme/dark.scss
+++ b/src/theme/dark.scss
@@ -923,8 +923,8 @@
     .addr-content {
       .addr-container {
         .text-address {
-          background-color: $bg-color-dark-theme-2;
-          color: $text-color-dark-theme-2;
+          background-color: $bg-color-dark-theme-3;
+          color: $text-color-dark-theme-3;
         }
       }
       .qr-container {
